<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP70_MAIN" Id="{274a6342-ae05-4ff5-bf11-5c024a4de019}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP70_MAIN
VAR
	OP70_Modeselection_FB: Mode_Selection_Block1;
	TP_100ms: TP;
	Pulse_1s: BOOL;
	Times: LREAL;
	Pge_NUM : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
OP70_Manual();
OP70_AUTOSEQUENCE();
OP70_CONVEYOR();
OP70_Error();
OP70_Initialize_Seq();

//MOdeselection From HMI

IF (OP70_GVL.OP70_HMI_AutoMode AND NOT OP70_GVL.OP70_HMI_ManualMOde AND NOT OP70_GVL.OP70_HMI_StepMode) THEN
	OP70_Modeselection_FB.ModeWord:=1;
	ELSIF (NOT OP70_GVL.OP70_HMI_AutoMode AND OP70_GVL.OP70_HMI_ManualMOde AND NOT OP70_GVL.OP70_HMI_StepMode) THEN
		OP70_Modeselection_FB.ModeWord:=2;
	ELSIF  (NOT OP70_GVL.OP70_HMI_AutoMode AND NOT OP70_GVL.OP70_HMI_ManualMOde AND  OP70_GVL.OP70_HMI_StepMode) THEN
		OP70_Modeselection_FB.ModeWord:=3;
    ELSE   
		OP70_Modeselection_FB.ModeWord:=0;
END_IF
(*
IF  (OP70_AutoSelected OR OP70_ManualSelected ) AND NOT OP70_ErrorActive AND OP70_Safety_OK THEN
  SR70_CONV_servo.bEnable:=TRUE;
  SR70_HORI_servo.bEnable:=TRUE;
  SR70_VERT_servo.bEnable:=TRUE;
ELSE 
  SR70_CONV_servo.bEnable:=FALSE;
  SR70_HORI_servo.bEnable:=FALSE;
  SR70_VERT_servo.bEnable:=FALSE;	
END_IF

IF SR70_CONV_servo.bAxisError THEN//OR SR70_HORI_servo.bAxisError OR SR70_VERT_servo.bAxisError THEN
	OP70_ErrorActive:=TRUE;
END_IF
*)
OP70_Modeselection_FB(
	ModeWord:= , 
	HomeConditionOK:=OP70_HomeConditionOK , 
	OperationEnable:=OP70_AutoSelected AND OP70_Safety_OK , 
	StartPB:=OP70_HMI_Cycle_Start , 
	SafetyAndNOError:= OP70_Safety_OK, 
	ModeAck:=TRUE , 
	HomingINProgress:=OP70_HomeRunning , 
	TempHomeOK:=OP70_Temp_hmeOK , 
	ResetPB:= , 
	AutoSelected=> OP70_AutoSelected, 
	ManualSelected=> OP70_ManualSelected, 
	StepSelected=>OP70_StepSelected , 
	ModeSelAck_Indication=> , 
	StatusDisplay=> , 
	AutoRunning:=OP70_AutoRunning, 
	StepRunning:=OP70_StepRunning , 
	StartEnable:=OP70_StartEnable  , 
	MachineStop:=OP70_Machine_Stop );
	
TP_100ms(IN:=NOT TP_100ms.Q , PT:=T#1S , Q=>Pulse_1s, ET=> );	]]></ST>
    </Implementation>
    <LineIds Name="OP70_MAIN">
      <LineId Id="3" Count="52" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>